# fabric-tenfoot

./: meson.build  meson.options  package.nix
demo/: meson.build
demo/src/: main.vala  meson.build
demo/src/pages/: base_page.vala  meson.build  test_page.vala  welcome_page.vala  widgets_playground_page.vala
resources/: meson.build  resources.gresource.xml
resources/styles/: animations.less  generic.less  index.less  mixins.less  variables.less
resources/styles/components/: bottom_bar.less  buttons.less  dialog.less  dropdown.less  form.less  global_menu.less  index.less  input_row.less  modal_layer.less  on_screen_keyboard.less
src/: configuration.vala.in  contextual_action.vala  contextual_widget.vala  meson.build  tenfoot_application.vala
src/components/: bottom_bar.vala  button.vala  button_prompt.vala  dialog.vala  dropdown.vala  global_menu.vala  input_row.vala  menu_item.vala  meson.build  modal_layer.vala  null_focus.vala  on_screen_keyboard.vala  text_input.vala
src/controllers/: gamepad_controller.vala  meson.build
src/vapi/: event_code.vapi  fixups.vapi
